--- a/Professor/aluno.tex
+++ b/Professor/aluno.tex
@@ -29,9 +29,9 @@
 % \include{chapters/ladrilhos}
 % \include{chapters/cartografia}
 % \include{chapters/cartografia_bibliografia}
-\include{chapters/investigacao}
+% \include{chapters/investigacao}
 % \include{chapters/exponencial}
-% \include{chapters/superficie}
+\include{chapters/superficie}
 % \include{chapters/logaritmos}
 % \include{chapters/logaritmos_bibliografia}
 
