--- a/Professor/professor.tex
+++ b/Professor/professor.tex
@@ -27,11 +27,11 @@
 % \include{chapters/financeira}
 % \include{chapters/taxa}
 % \include{chapters/ladrilhos}
-\include{chapters/cartografia}
+% \include{chapters/cartografia}
 
 % \include{chapters/investigacao}
 % \include{chapters/exponencial}
-% \include{chapters/superficie}
+\include{chapters/superficie}
 % \include{chapters/logaritmos}
 
 \newgeometry{textwidth=840pt,outer=50pt, top=2cm}
@@ -44,8 +44,8 @@
 \clearpage
 \end{multicols}
 
-\include{bibliografia/cartografia_bibliografia}
-% \include{bibliografia/logaritmosMD_bibliografia}
+% \include{bibliografia/cartografia_bibliografia}
+% \include{bibliografia/logaritmos_bibliografia}
 
 \renewcommand{\indexname}{Índice}
 \printindex
