--- a/livroaberto.sty
+++ b/livroaberto.sty
@@ -500,7 +500,7 @@ underlay boxed title={
 
 
 \titlespacing*{\section}
-{0pt}{1mm}{1mm}
+{0pt}{2mm}{1mm}
 \titlespacing*{\subsection}
 {0pt}{1mm}{1mm}
 
@@ -778,7 +778,7 @@ underlay boxed title={
         \draw [session1, thick] (b) --++ ($(\textwidth,0.00mm)+(-72 mm,0 mm)$); % changed
         \node (title) at ($(a1)!0.5!(b1)$) [right] {\large\secondtitlefont\textcolor{session1}{\MakeUppercase{ #1}}};
     \end{tikzpicture}
-    \vspace{3 mm}
+    \vspace{3pt}
     
     	\def\currentcolor{session1}
 	%setting depth 1 enumerate style
@@ -800,7 +800,7 @@ underlay boxed title={
         \draw [session2, thick] (b) -- ++($(\textwidth,0.00mm)+(-72 mm,0 mm)$);
         \node (title) at ($(a1)!0.5!(b1)$) [right] { \large\secondtitlefont\textcolor{session2}{\MakeUppercase{ #1}}};
     \end{tikzpicture}
-\vspace{3 mm}
+\vspace{3pt}
 
 	\def\currentcolor{session2}
 	%setting depth 1 enumerate style
@@ -823,7 +823,7 @@ underlay boxed title={
         \draw [session3, thick] (b) -- ++($(\textwidth,0.00mm)+(-72 mm,0 mm)$);
         \node (title) at ($(a1)!0.5!(b1)$) [right] {\large\secondtitlefont\textcolor{session3}{\MakeUppercase{ #1}}};
     \end{tikzpicture}
-\vspace{3 mm}
+\vspace{3pt}
 
 	\def\currentcolor{session3}
 	%setting depth 1 enumerate style
@@ -842,7 +842,7 @@ underlay boxed title={
         \draw [session4, thick] (b) -- ++($(\textwidth,0.00mm)+(-72 mm,0 mm)$);
         \node (title) at ($(a1)!0.5!(b1)$) [right] {\large\secondtitlefont\textcolor{session4}{\MakeUppercase{ #1}}\newline};
     \end{tikzpicture}
-\vspace{3 mm}
+\vspace{3pt}
 
 	\def\currentcolor{session4}
 	%setting depth 1 enumerate style
@@ -863,11 +863,10 @@ underlay boxed title={
 	\fill [draw=cor2, very thick , fill=cor1] ($(\textwidth/2 , 0mm) + (19mm,6mm)$) -- ++(0.00mm,-5.5 mm) coordinate (line1) arc [start angle=0, end angle=-90, x radius=2.00mm, y radius=2.00mm] -| ++(-38.00mm , 0.00mm)  -- ++ (0mm, 5.5 mm) coordinate (line2) arc [start angle=180, end angle=90, x radius=2.00mm, y radius=2.00mm] -- cycle;
 	\node (exercise) at ($(line1)!0.5!(line2) + (0 mm, .8 mm)$) [text=white, font=\thirdtitlefont\Large] {EXERCÍCIOS};%\fontsize{13pt}{0}
 	\end{tikzpicture}
-	\vspace{8 mm}
+	\vspace{1 mm}
     \def\currentcolor{cor1}
 	
-
-\setlist[enumerate]{label=\protect\enumbox{\arabic*}}
+	\setlist[enumerate]{label=\protect\enumbox{\arabic*}}
 \setlist[enumerate,2]{label=\emph{\alph*)},ref=\theenumi.\emph{\arabic*}}
 \setlist[enumerate,3]{label=\emph{\roman*)},ref=\theenumi.\emph{\roman*}}
 }
