--- a/aluno.tex
+++ b/aluno.tex
@@ -28,9 +28,9 @@
 % \include{chapters/taxa}
 % \include{chapters/ladrilhos}
 % \include{chapters/cartografia}
-\include{chapters/investigacao}
+% \include{chapters/investigacao}
 % \include{chapters/exponencial}
-% \include{chapters/superficie}
+\include{chapters/superficie}
 % \include{chapters/logaritmos}
 % \include{chapters/livroaberto}
 
