Função Afim e A Natureza da Estatística
Adiciona as versões do professor destes dois capítulos.

--- a/Professor/professor.tex
+++ b/Professor/professor.tex
@@ -15,7 +15,7 @@
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
-% \include{chapters/funcao-afim}
+\include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
@@ -31,13 +31,13 @@
 
 % \include{chapters/investigacao}
 % \include{chapters/exponencial}
-\include{chapters/superficie}
+% \include{chapters/superficie}
 % \include{chapters/logaritmos}
 
 \newgeometry{textwidth=840pt,outer=50pt, top=2cm}
 \pagestyle{plain}
 \def\currentcolor{cor1}
-\section{Notas}
+\section{\huge Notas}
 \setlength{\columnsep}{1cm}
 \begin{multicols}{2}
 \theendnotes
@@ -46,6 +46,7 @@
 
 % \include{bibliografia/cartografia_bibliografia}
 % \include{bibliografia/logaritmos_bibliografia}
+% \include{bibliografia/exponencial_bibliografia}
 
 \renewcommand{\indexname}{Índice}
 \printindex
