--- a/aluno.tex
+++ b/aluno.tex
@@ -14,9 +14,9 @@
 % \include{chapters/vetores-novo1}         
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
-\include{chapters/funcoes}
+% \include{chapters/funcoes}
 % \include{chapters/funcao-afim}
-% \include{chapters/funcao-quadratica}
+\include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
