--- a/Professor/aluno.tex
+++ b/Professor/aluno.tex
@@ -15,7 +15,7 @@
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
-% \include{chapters/funcao-afim}
+\include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
@@ -31,7 +31,7 @@
 % \include{chapters/cartografia_bibliografia}
 % \include{chapters/investigacao}
 % \include{chapters/exponencial}
-\include{chapters/superficie}
+% \include{chapters/superficie}
 % \include{chapters/logaritmos}
 % \include{chapters/logaritmos_bibliografia}
 
