--- a/Professor/professor.tex
+++ b/Professor/professor.tex
@@ -15,9 +15,9 @@
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
-\include{chapters/funcao-afim}
+% \include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
-% \include{chapters/estatistica1}
+\include{chapters/estatistica1}
 % \include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
 % \include{chapters/medidas}
